[project]
name = "agent-swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "langsmith>=0.7.30",
    "python-dotenv>=1.2.2",
]
